<resources>
    <string name="app_name">DucklabAndroidApp</string>
    <string name="title_activity_login">DuckLab</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="nav_home">Home</string>
    <string name="market">Stocks</string>
    <string name="games">Games</string>
    <string name="nav_market">Market</string>
    <string name="nav_games">Games</string>
    <string name="marketDescriptionString">This is where you can learn all about the different stocks currently traded on the open market. To find out more about a stock, search a company name then click on the result!</string>
    <string name="marketHeadlineString">Market Watch Center:</string>
    <string name="searchButtonString">Search</string>
    <string name="title">Welcome to Ducklab Investments!</string>
    <string name="registerString" />
    <string name="registerString1">Register</string>
    <string name="gmaeDetailsTitleString">Game Details:</string>
    <string name="gameLeaderboardTitle">Leaderboard:</string>
    <string name="joinGameString">Join Game</string>
    <string name="gameTypeString">Game Type:</string>
    <string name="startbalancestring">Starting Balance:</string>
    <string name="ManageButtonString">Manage</string>
    <string name="manageGameString">Manage Game:</string>

</resources>
