<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_market"
        android:checkable="true"
        android:enabled="true"
        android:icon="@drawable/ic_assessment"
        android:title="@string/nav_market"
        android:visible="true" />
    <item
        android:id="@+id/nav_home"
        android:checkable="true"
        android:enabled="true"
        android:icon="@drawable/ic_action_name"
        android:title="@string/nav_home"
        android:visible="true" />
    <item
        android:id="@+id/nav_games"
        android:checkable="true"
        android:enabled="true"
        android:icon="@drawable/ic_games"
        android:title="@string/nav_games"
        android:visible="true" />
</menu>