<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/gameDetailsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/gmaeDetailsTitleString"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintStart_toStartOf="@+id/gameDetailsTitle"
        app:layout_constraintTop_toBottomOf="@+id/gameDetailsTitle" />

    <TextView
        android:id="@+id/gameLeaderboardTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/gameLeaderboardTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="@+id/gameName"
        app:layout_constraintTop_toBottomOf="@+id/gameTypeTitle" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/leaderboardList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameLeaderboardTitle" />

    <Button
        android:id="@+id/joinButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_button"
        android:text="@string/joinGameString"
        app:layout_constraintBottom_toBottomOf="@+id/gameLeaderboardTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gameLeaderboardTitle" />

    <TextView
        android:id="@+id/gameTypeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/gameTypeString"
        app:layout_constraintStart_toStartOf="@+id/gameName"
        app:layout_constraintTop_toBottomOf="@+id/gameName" />

    <TextView
        android:id="@+id/gameType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/gameTypeTitle"
        app:layout_constraintStart_toEndOf="@+id/gameTypeTitle"
        app:layout_constraintTop_toTopOf="@+id/gameTypeTitle"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/startBalanceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:text="@string/startbalancestring"
        app:layout_constraintStart_toEndOf="@+id/gameType"
        app:layout_constraintTop_toTopOf="@+id/gameType" />

    <TextView
        android:id="@+id/startingBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/startBalanceTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toEndOf="@+id/startBalanceTitle"
        app:layout_constraintTop_toTopOf="@+id/startBalanceTitle"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>